@@ -1,3 +1,9 @@
+2002-06-02  Ross Burton  <ross@burtonini.com>
+
+	* graphics.c: Use the application pixmap path instead of the
+	system path, so pixmaps loads if installed in a different prefix
+	to libgnome.
+
 2002-06-03  Bastien Nocera  <hadess@hadess.net>
 
 	* menu.c: (about_cb): remove separator in help menu, add icon in the
